--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # VITE_SERVER_HOST = https://it-bond-w22.elektro.ru:4344/
-VITE_SERVER_HOST = http://10.0.12.179:3000/
+VITE_SERVER_HOST = http://10.0.12.179:3000
