--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # VITE_SERVER_HOST = https://it-bond-w22.elektro.ru:4344/
 # VITE_SERVER_HOST = http://10.0.12.179:3000
-# VITE_SERVER_HOST = http://api.elektro.ru
-VITE_SERVER_HOST = http://localhost:3000
+VITE_SERVER_HOST = http://api.elektro.ru
+# VITE_SERVER_HOST = http://localhost:3000
 
